tests/invalid/Return_Invalid_11.whiley
function f(int x) -> void:
    return x
